# pylox

./: .gitignore  README.md  pyproject.toml
config/: knobs.toml
src/pylox/: __init__.py  __main__.py  errors.py  expression.py  interpreter.py  knobs.py  parser.py  pylox.py  scanner.py  statement.py  token.py
